commit #4: new settings

--- a/src/settings.html
+++ b/src/settings.html
@@ -18,12 +18,17 @@
       </div>
     </nav>
     <div id="content_music-lib" class="page-content mdc-typography">
-      <h2 class="title_bar">Music folders :</h2>
+      <h3 style="margin: 20px 0 14px 16px;">Music folders :</h3>
       <ul id="list_musicFolders" class="mdc-list"></ul>
       <button id="btn_addFolder" class="mdc-fab mdc-fab--mini mdc-ripple" style="margin-left: 16px;"><span class="mdc-fab__icon material-icons">add</span></button>
     </div>
     <div id="content_playback" class="page-content mdc-typography">
-
+      <h3 style="margin: 20px 0 0 16px;">Output device :</h3>
+      <div id="select_outDevive" class="mdc-select" style="margin: 0 16px; width: -webkit-fill-available;">
+        <select id="select_content_outDevive" class="mdc-select__native-control"></select>
+        <label class="mdc-floating-label">Select output device</label>
+        <div class="mdc-line-ripple"></div>
+      </div>
     </div>
     <div id="content_shell" class="page-content mdc-typography">
 
